--- a/themes/agavecss/_agavecss.defaults.scss
+++ b/themes/agavecss/_agavecss.defaults.scss
@@ -1,9 +1,9 @@
 // (C) Copyright 2014-2016 Hewlett Packard Enterprise Development LP
 
-$brand-color: #865CD6;
-$brand-neutral-colors: (#0A64A0, #DC2878, #501EB4, #49516F);
-$brand-accent-colors: (#00CCEB, #FF7D28);
-$brand-link-color: #865CD6;
+$brand-color: #00B289;
+$brand-neutral-colors: (#A1E3F2, #E57E7d, #049674, #49516F);
+$brand-accent-colors: (#A1E3F2, #129FDD);
+$brand-link-color: #00B289;
 $brand-status-colors: (
   critical: #FF324D,
   error: #FF324D,
